change home logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
         <link rel="icon" type="image/png" href="img/favicon.png">
 
         <!-- Font selection from Google Fonts -->
@@ -23,7 +22,6 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
     </head>
     <body id="home">
@@ -53,7 +51,7 @@
                     </ul>
 
 
-                    <a class="site-title" href="index.html"><img class="logo-svg" src="img/logo-white.svg"></a>
+                    <a class="site-title" href="index.html"><span class="white">Madison Real Estate</span></a>
 
                     <div class="btn-menu burger-trigger">
                         <div class="hamburger">
