change about logo

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             </ul>
 
             <a class="site-title" href="index.html">
-                <div><img class="logo-svg" src="img/logo.svg" alt="Madison Real Estate Inc.'s logo"></div>
+                <span class="dark-blue logo">Madison Real Estate</span>
             </a>
 
             <div class="btn-menu burger-trigger">
