--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </ul>
 
 
-                    <a class="site-title" href="index.html"><span class="white logo-svg">Madison Real Estate</span></a>
+                    <a class="site-title" href="index.html"><span class="white logo">Madison Real Estate</span></a>
 
                     <div class="btn-menu burger-trigger">
                         <div class="hamburger">
