change all logos

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,9 @@
             </ul>
 
 
-            <a class="site-title" href="index.html"><img class="logo-svg" src="img/logo.svg"></a>
+            <a class="site-title" href="index.html">
+                <span class="dark-blue logo">Madison Real Estate</span>
+            </a>
 
         <div class="btn-menu burger-trigger">
             <div class="hamburger">
