--- a/lake-street.html
+++ b/lake-street.html
@@ -54,7 +54,9 @@
                 <li><a class="fade" href="contact.html">Contact</a></li>
             </ul>
 
-            <a class="site-title" href="index.html"><img class="logo-svg" src="img/logo.svg" alt="Madison Real Estate Inc.'s logo"></a>
+            <a class="site-title" href="index.html">
+                <span class="dark-blue logo">Madison Real Estate</span>
+            </a>
 
             <div class="btn-menu burger-trigger">
                 <div class="hamburger">
