--- a/pleasant-valley.html
+++ b/pleasant-valley.html
@@ -53,8 +53,10 @@
             </ul>
 
 
-            <a class="site-title" href="index.html"><img class="logo-svg" src="img/logo.svg" alt="Madison Real Estate Inc.'s logo"></a>
-
+            <a class="site-title" href="index.html">
+                <span class="dark-blue logo">Madison Real Estate</span>
+            </a>
+            
             <div class="btn-menu burger-trigger">
                 <div class="hamburger">
                     <a class="btn-open">
