--- a/about.html
+++ b/about.html
@@ -201,8 +201,8 @@
                 </p>
             </div>
             <div class="col-md-8">
-                <p>310.499.2777 <br>
-                    madisonrealestate@outlook.com
+                <p>310.347.2277 <br>
+                    info@madison-rei.com
                 </p>
             </div>
             <div class="footer-links display-none">
