--- a/contact.html
+++ b/contact.html
@@ -96,8 +96,8 @@
                 <div class="direct-contact">
                     <h3>Direct Contact</h3>
                     <p>
-                        madisonrealestate@outlook.com <br />
-                        tel <span>310.499.2777 </span><br />
+                        info@madison-rei.com <br />
+                        tel <span>310.347.2277</span><br />
                         fax <span>310.388.0625</span>
                     </p>
                 </div>
@@ -121,13 +121,14 @@
 
                 <p>Madison Real Estate Inc.<br><br>
                     9312 South Civic Center Drive <br>
+                    Suite 105 <br>
                     Beverly Hills, California 90210<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>310.499.2777 <br>
-                    madisonrealestate@outlook.com
+                <p>310.347.2277 <br>
+                    info@madison-rei.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -143,7 +144,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>Copyright © 2017 Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
