--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>Copyright © 2017 Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
