--- a/sunset-fuller.html
+++ b/sunset-fuller.html
@@ -141,8 +141,8 @@
                 </p>
             </div>
             <div class="col-md-8">
-                <p>310.499.2777 <br>
-                    madisonrealestate@outlook.com
+                <p>310.347.2277 <br>
+                    info@madison-rei.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -158,7 +158,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>Copyright © 2017 Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
