--- a/about.html
+++ b/about.html
@@ -194,15 +194,13 @@
         <div class="row">
             <div class="col-md-5 col-lg-4 col-sm-8">
                 <p>Madison Real Estate Inc.<br><br>
-                    9312 South Civic Center Drive <br>
-                    Suite 105 <br>
-                    Beverly Hills, California 90210<br>
+                    6338 Wilshire Blvd <br>
+                    Los Angeles, California 90048<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>310.347.2277 <br>
-                    info@madison-rei.com
+                <p>310.347.2277 
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -218,7 +216,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright © 2017 Madison Real Estate Inc. All rights reserved.</p>
+            <p>Copyright © 2020 Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
@@ -248,14 +246,7 @@
     })();
 </script>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-</script>
+
 </body>
 </html>
 
