--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
                 <p>Madison Real Estate Inc.<br><br>
                     6338 Wilshire Blvd <br>
                     Los Angeles, California 90048<br>
-                    <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
+                    <a href="https://goo.gl/maps/b5Xt6s3NHM8QyefTA" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
