--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,10 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    
+    <!-- Mapbox -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body id="contact">
 <script>document.body.className += ' fade-out';</script>
@@ -88,9 +92,9 @@
                 <div class="location">
                     <h3>Location</h3>
                     <p>
-                        9312 Civic Center Dr., Ste. 105 <br> 
-                        Beverly Hills, Ca 90210 <br />
-                        <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get Directions +</a>
+                    6338 Wilshire Blvd <br>
+                    Los Angeles, California 90048<br>
+                    <a href="https://goo.gl/maps/b5Xt6s3NHM8QyefTA" target="_blank">Get directions +</a>
                     </p>
                 </div>
                 <div class="direct-contact">
@@ -118,12 +122,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-lg-4 col-sm-8">
-
                 <p>Madison Real Estate Inc.<br><br>
-                    9312 South Civic Center Drive <br>
-                    Suite 105 <br>
-                    Beverly Hills, California 90210<br>
-                    <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
+                    6338 Wilshire Blvd <br>
+                    Los Angeles, California 90048<br>
+                    <a href="https://goo.gl/maps/b5Xt6s3NHM8QyefTA" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
@@ -144,7 +146,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright © 2017 Madison Real Estate Inc. All rights reserved.</p>
+            <p>Copyright © 2020 Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
@@ -174,53 +176,20 @@
 </script>
 
 <!-- Map -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMtBa-QvN-JgcVABe8fjQLqL3PAj1s78s&callback=initMap"
-        type="text/javascript"></script>
+<style>
+    .page-header-container {
+        padding-bottom: 0;
+     }
+</style>
 <script>
-    var map;
-    function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-        });
-        var mapOptions = {
-            zoom: 13,
-            disableDefaultUI: true,
-            scrollwheel: false,
-            scaleControl: false,
-
-            // The latitude and longitude to center the map (always required)
-            center: new google.maps.LatLng(34.0757078, -118.3966908),
-
-            styles: [{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"},{"visibility":"off"}]},{"featureType":"administrative","elementType":"labels.text.stroke","stylers":[{"visibility":"off"}]},{"featureType":"administrative.province","elementType":"labels.text","stylers":[{"visibility":"off"}]},{"featureType":"administrative.locality","elementType":"labels.text","stylers":[{"visibility":"on"}]},{"featureType":"administrative.neighborhood","elementType":"labels.text","stylers":[{"visibility":"on"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"landscape.man_made","elementType":"geometry.fill","stylers":[{"color":"#c9c9c9"}]},{"featureType":"landscape.natural","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"color":"#ebebeb"},{"visibility":"on"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"},{"color":"#ff0000"}]},{"featureType":"poi","elementType":"geometry.fill","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45},{"visibility":"off"}]},{"featureType":"road","elementType":"geometry.fill","stylers":[{"visibility":"off"},{"color":"#cfcfcf"}]},{"featureType":"road","elementType":"labels.text.fill","stylers":[{"visibility":"on"},{"color":"#000000"}]},{"featureType":"road","elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#959595"}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#cecece"}]},{"featureType":"road.highway","elementType":"labels.text.fill","stylers":[{"visibility":"off"}]},{"featureType":"road.highway","elementType":"labels.text.stroke","stylers":[{"visibility":"off"}]},{"featureType":"road.highway","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"road.highway.controlled_access","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#cccccc"}]},{"featureType":"road.highway.controlled_access","elementType":"labels.text.fill","stylers":[{"visibility":"off"}]},{"featureType":"road.highway.controlled_access","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"road.arterial","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#dfdfdf"}]},{"featureType":"road.arterial","elementType":"labels.text.fill","stylers":[{"visibility":"off"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"road.local","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#ebebeb"}]},{"featureType":"road.local","elementType":"labels.text.fill","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry.fill","stylers":[{"visibility":"off"},{"color":"#767676"}]},{"featureType":"transit.station.airport","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#c1c1c1"}]},{"featureType":"transit.station.rail","elementType":"geometry.fill","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#36b1e4"},{"visibility":"off"}]}]
-        };
-        var mapElement = document.getElementById('map');
-
-        // Create the Google Map using out element and options defined above
-        var map = new google.maps.Map(mapElement, mapOptions);
-
-        // Define the Lattitude and Longitude for the map location
-
-        var myLatLng = new google.maps.LatLng(34.0757078, -118.3966908);
-
-        // Define the map marker characteristics
-        var mapMarker = new google.maps.Marker({
-            position: myLatLng,
-            map: map,
-            title:  'Madison Real Estate Inc.'
-
-        });
-
-    }
+    mapboxgl.accessToken = 'pk.eyJ1IjoibmRhbmllbCIsImEiOiJjaXB4YTl0NTQwd3MwZnRtMjM1MDU1bXphIn0.kJ7YgHolQnuHJe1sOYi5Zw';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/ndaniel/ck7dqxqqx1f7g1itarp432wv5',
+        center: [-118.3690145, 34.0634653], // starting position [lng, lat]
+        zoom: 13 // starting zoom
+    });
 </script>
 
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-</script>
 </body>
 </html>
