--- a/about.html
+++ b/about.html
@@ -200,7 +200,8 @@
                 </p>
             </div>
             <div class="col-md-8">
-                <p>310.347.2277 
+                <p>310.347.2277 <br>
+                    info@madison-rei.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -245,7 +246,6 @@
         });
     })();
 </script>
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 
 </body>
 </html>
