--- a/biomat.html
+++ b/biomat.html
@@ -132,6 +132,7 @@
             </div>
             <div class="col-md-8">
                 <p>310.347.2277 <br>
+                    info@madison-rei.com
                 </p>
             </div>
             <div class="footer-links display-none">
